Closed Bug 1280964 Opened 8 years ago Closed 8 years ago

fix gtk+2 build problems in widget/gtk/

Categories

(Core :: Widget: Gtk, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox47 --- unaffected
firefox48 --- unaffected
firefox49 --- unaffected
firefox50 --- fixed

People

(Reporter: froydnj, Assigned: froydnj)

References

Details

(Keywords: regression)

Attachments

(1 file)

IntSize was not properly namespaced, and the lone caller of
GetDrawTargetForGdkDrawable wasn't passing the correct type.
I'm not sure whether the prototype should be changed to accept IntRect or
whether the caller should be changed to IntSize; guidance welcome!
Attachment #8763611 - Flags: review?(karlt)
Comment on attachment 8763611 [details] [diff] [review]
fix gtk+2 build problems in widget/gtk/

Look like this is what was intended, thanks.
Attachment #8763611 - Flags: review?(karlt) → review+
Pushed by nfroyd@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/72d118d37454
fix gtk+2 build problems in widget/gtk/; r=karlt
Blocks: 1278236
Keywords: regression
https://hg.mozilla.org/mozilla-central/rev/72d118d37454
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Thanks for fixing this.
Version: unspecified → Trunk
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: