Bug 1280964 - fix gtk+2 build problems in widget/gtk/; r=karlt